--- a/src/components/Expenses/ExpensesList.css
+++ b/src/components/Expenses/ExpensesList.css
@@ -4,6 +4,7 @@
   }
   
 .expenses-list__fallback {
-color: white;
-text-align: center;
+  color: white;
+  margin-top: 10px;
+  text-align: center;
 }
